# c-

lab1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  ProjectName.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lab1.sln  lab1.vcxproj  lab1.vcxproj.filters  main.cpp  main.vcxproj  main.vcxproj.filters  new_main.cpp
lab1/avg_dir/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakelist.txt  CMakelists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  av_sh.vcxproj  av_st.vcxproj  av_st.vcxproj.filters  avg.sln  avg_func.cpp  avg_func.hpp  cmake_install.cmake
lab1/avg_dir/Debug/: av_st.lib
lab1/avg_dir/av_sh.dir/Debug/: av_sh.dll.recipe  av_sh.ilk
lab1/avg_dir/av_sh.dir/Debug/av_sh.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  (+5 more)
lab1/include/: introduction.hpp
lab1/lab1.dir/Debug/: lab1.exe.recipe  lab1.ilk
lab1/lab1.dir/Debug/lab1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab1/main/: main.sln
lab1/main.dir/Debug/: main.exe.recipe  main.ilk
lab1/main.dir/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab1/main/main/: main.cpp  main.vcxproj
lab1/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
lab1/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
(+20 files in other folders)
